k8s/agent-detect-sim.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartops-agent-detect-sim
  namespace: smartops-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartops-agent-detect-sim
  template:
    metadata:
      labels:
        app: smartops-agent-detect-sim
    spec:
      containers:
        - name: agent-detect
          image: registry.digitalocean.com/smartops-registry/smartops-orchestrator:agent-detect-cloud-latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
