k8s/policy-engine-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartops-policy-engine
  namespace: smartops-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartops-policy-engine
  template:
    metadata:
      labels:
        app: smartops-policy-engine
    spec:
      containers:
        - name: policy-engine
          image: smartops-policy-engine:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
          volumeMounts:
            - name: policy-store
              mountPath: /policy_engine/store
      volumes:
        - name: policy-store
          persistentVolumeClaim:
            claimName: policy-store-pvc
