k8s/policy-engine-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartops-policy-engine
  namespace: smartops-dev
spec:
  selector:
    app: smartops-policy-engine
  ports:
    - name: http
      port: 5051
      targetPort: 8002
  type: ClusterIP
